--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Temporary Home Page</title>
+    <title>Dry Oar Rafting</title>
     </head>
     <body>
-    <h1>shaneclements.github.io</h1>
-      <p> This is a temporary home page served from a GitHub repository.</p>
+        
+    <h1>Dry Oar Rafting</h1>
+      <p>Home Page for the white water rafing company.</p>
+        <ol><h2>We specialize in... </h2>
+            <li>Family oriented fun.</li>
+            <li>Ambitious rafting adventures.</li>
+            <li>Outdoor exploration.</li>
+            </ol>
+    
     </body>
 </html>
